--- a/portal/html/USR-1350-F-LIST.html
+++ b/portal/html/USR-1350-F-LIST.html
@@ -33,7 +33,7 @@
             <nav id="nav">
                 <ul>
                     <li>
-                        <a href="javascript:void(0);">벤처투자매칭</a>
+                        <a href="">벤처투자매칭</a>
                         <ul>
                             <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
                             <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
@@ -60,7 +60,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">투자가이드</a>
+                        <a href="">투자가이드</a>
                         <ul>
                             <li><a href="./USR-1110-H-CONTN.html">가이드 A to Z</a></li>
                             <li><a href="./USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
@@ -71,7 +71,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">정보서비스</a>
+                        <a href="">정보서비스</a>
                         <ul>
                             <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
                             <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
@@ -102,14 +102,14 @@
                             <li>
                                 <a href="./USR-1251-H-CONTN.html">업무처리지원</a>
                                 <ul>
-                                    <li><a href="./USR-12511-H-CONTN.html">VC 경력 확인</a></li>
-                                    <li><a href="./USR-1252-F-LIST.html">신청내역확인</a></li>
+                                    <li><a href="./USR-1251-H-CONTN.html">VC 경력 확인</a></li>
+                                    <li><a href="./USR-1242-F-LIST.html">신청내역확인</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">벤처투자포털</a>
+                        <a href="">벤처투자포털</a>
                         <ul>
                             <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
                             <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
@@ -168,14 +168,14 @@
             </div>
             <ul>
                 <li class="on">
-                    <a href="javascript:void(0);">벤처투자매칭</a>
+                    <a href="">벤처투자매칭</a>
                     <ul>
                         <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
                         <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
                         <li><a href="./USR-1030-B-LIST.html">기업홍보</a></li>
                         <li><a href="./USR-1040-F-DASH.html">통합공시</a></li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">벤처투자마트</a>
+                            <a href="">벤처투자마트</a>
                             <ul>
                                 <li><a href="./USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
                                 <li><a href="./USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
@@ -185,7 +185,7 @@
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">주식유통정보</a>
+                            <a href="">주식유통정보</a>
                             <ul>
                                 <li><a href="./USR-1061-H-CONTN.html">VC구주유통망</a></li>
                                 <li><a href="./USR-1062-H-CONTN.html">구주거래정보망</a></li>
@@ -195,7 +195,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:void(0);">투자가이드</a>
+                    <a href="">투자가이드</a>
                     <ul>
                         <li><a href="./USR-1110-H-CONTN.html">가이드 A to Z</a></li>
                         <li><a href="./USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
@@ -206,19 +206,19 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:void(0);">정보서비스</a>
+                    <a href="">정보서비스</a>
                     <ul>
                         <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
                         <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">통계</a>
+                            <a href="">통계</a>
                             <ul>
                                 <li><a href="./USR-1220-F-DASH.html">대시보드</a></li>
                                 <li><a href="./USR-1221-F-DTL.html">투자실적</a></li>
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">자료실</a>
+                            <a href="">자료실</a>
                             <ul>
                                 <li><a href="./USR-1231-B-LIST.html">보고서</a></li>
                                 <li><a href="./USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
@@ -228,30 +228,30 @@
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">구인구직</a>
+                            <a href="">구인구직</a>
                             <ul>
                                 <li><a href="./USR-1241-F-LIST.html">채용공고</a></li>
                                 <li><a href="./USR-1242-F-LIST.html">인력Pool</a></li>
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="javascript:void(0);l">업무처리지원</a>
+                            <a href="l">업무처리지원</a>
                             <ul>
-                                <li><a href="./USR-12511-H-CONTN.html">VC 경력 확인</a></li>
-                                <li><a href="./USR-1252-F-LIST.html">신청내역확인</a></li>
+                                <li><a href="./USR-1251-H-CONTN.html">VC 경력 확인</a></li>
+                                <li><a href="./USR-1242-F-LIST.html">신청내역확인</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:void(0);">벤처투자포털</a>
+                    <a href="">벤처투자포털</a>
                     <ul>
                         <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
                         <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
                         <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
                         <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">벤처투자 부당행위 신고센터</a>
+                            <a href="">벤처투자 부당행위 신고센터</a>
                             <ul>
                                 <li><a href="./USR-1350-F-FORM.html">부당행위 신고</a></li>
                                 <li><a href="./USR-1350-F-LIST.html">신고내역확인</a></li>
@@ -277,11 +277,11 @@
     </aside>
 
     <!-- conteiner -->
-    <div id="container" class="container type_03">
+    <div id="container" class="container type_04">
         
         <!-- sub title -->
         <div class="tit_box sub_tit">
-            <h2>정보서비스</h2>
+            <h2>벤처투자포털</h2>
             <span>모든 벤처 투자 정보를 하나로</span>
         </div>
         <!-- //sub title -->
@@ -296,29 +296,21 @@
                         <a href="">home</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">정보서비스</a>
+                        <a href="">벤처투자포털</a>
                         <ul>
                             <li><a href="">벤처투자매칭</a></li>
                             <li><a href="">투자가이드</a></li>
-                            <li><a href="">벤처투자포털</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);">업무처리지원</a>
-                        <ul>
-                            <li><a href="">정책</a></li>
-                            <li><a href="">법령</a></li>
-                            <li><a href="">통계</a></li>
-                            <li><a href="">자료실</a></li>
-                            <li><a href="">구인구직</a></li>
+                            <li><a href="">정보서비스</a></li>
                         </ul>
                     </li>
                     <li class="selected">
-                        <a href="javascript:void(0);">VC Track Record</a>
+                        <a href="">벤처투자 부당행위 신고센터</a>
                         <ul>
-                            <li><a href="">VC 경력 확인</a></li>
-                            <li><a href="">VC 근무경력 확인</a></li>
-                            <li><a href="">신청내역 확인</a></li>
+                            <li><a href="">공지사항</a></li>
+                            <li><a href="">포털소개</a></li>
+                            <li><a href="">커뮤니티</a></li>
+                            <li><a href="">벤처투자 TALK</a></li>
+                            <li><a href="">유관기관 안내</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -327,105 +319,11 @@
             <div class="inner">
 
                 <div class="tit_box">
-                    <h3>VC Track Record</h3>
-                    <span>메뉴에 대한 설명을 상세하게 작성합니다. 메뉴에 대한 설명을 상세하게 작성합니다.</span>
+                    <h3>벤처투자 부당행위 신고센터</h3>
+                    <span>벤처투자 부당행위 신고센터는 벤처투자와 관련된 불법 사항에 대해 유형별로 신고합니다.</span>
                 </div>
 
-                <div class="content_list_box type_02">
-                    <div class="list_item">
-                        <dl>
-                            <dt>송은희 님의 회원정보로 확인 된 VC Track Record 는 아래와 같습니다.</dt>
-                            <dd>
-                                <ul>
-                                    <li>실제와 상이한 경력은 근무중 또는 근무했던 VC에 정보수정을 요청, 수정 완료 후에 다시 신청하시길 바랍니다.</li>
-                                    <li>VC Track Record 확인서는 협회 담당자의 승인 후에 출력이 가능합니다.</li>
-                                </ul>
-                            </dd>
-                        </dl>
-                    </div>
-
-                    <div class="tbl_box">
-                        <table>
-                            <caption>VC Track Record 확인</caption>
-                            <colgroup>
-                                <col width="15%">
-                                <col width="20%">
-                                <col width="20%">
-                                <col width="15%">
-                                <col width="10%">
-                                <col width="10%">
-                                <col width="10%">
-                            </colgroup>
-                            <thead>
-                                <tr>
-                                    <th scope="col" rowspan="2">구분</th>
-                                    <th scope="col" rowspan="2">조합명</th>
-                                    <th scope="col" rowspan="2">담당기간</th>
-                                    <th scope="col" rowspan="2">투자기업명</th>
-                                    <th scope="col" colspan="3" class="bdcolor">기여도</th>
-                                </tr>
-                                <tr>
-                                    <th scope="col">발급</th>
-                                    <th scope="col">심사</th>
-                                    <th scope="col">사후</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td rowspan="2">ㅇㅇ인베스먼트</td>
-                                    <td>ㅇㅇ벤처투자조합</td>
-                                    <td>2022-10-22 ~ 2022-10-22</td>
-                                    <td>아사달</td>
-                                    <td>-</td>
-                                    <td>100%</td>
-                                    <td>1%</td>
-                                </tr>
-                                <tr>
-                                    <td>ㅇㅇ벤처투자조합</td>
-                                    <td>2022-10-22 ~ 2022-10-22</td>
-                                    <td>아사달</td>
-                                    <td>-</td>
-                                    <td>100%</td>
-                                    <td>1%</td>
-                                </tr>
-                                <tr>
-                                    <td>ㅇㅇ인베스먼트</td>
-                                    <td>ㅇㅇ벤처투자조합</td>
-                                    <td>2022-10-22 ~ 2022-10-22</td>
-                                    <td>아사달</td>
-                                    <td>-</td>
-                                    <td>100%</td>
-                                    <td>1%</td>
-                                </tr>
-                                <tr>
-                                    <td>ㅇㅇ인베스먼트</td>
-                                    <td>ㅇㅇ벤처투자조합</td>
-                                    <td>2022-10-22 ~ 2022-10-22</td>
-                                    <td>아사달</td>
-                                    <td>-</td>
-                                    <td>100%</td>
-                                    <td>1%</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <div class="chk_box">
-                        <span>
-                            <input type="checkbox" id="chk_01">
-                            <label for="chk_01">위 사항은 사실과 다름이 없음을 확인합니다.</label>
-                        </span>
-                    </div>
-
-                    <div class="btn_box_group type_01 right">
-                        <div class="btn_box">
-                            <a href="" class="btn_gray">취소</a>
-                        </div>
-                        <div class="btn_box">
-                            <a href="" class="btn_navy">VC Track Record 확인 신청 >></a>
-                        </div>
-                    </div>
-                </div>
+                
 
             </div>
 
@@ -474,63 +372,120 @@
 
 </div>
 
-<!-- 경고팝업 -->
-<div id="alpop_01" class="dialog alpop_box">
+<!-- 더보기 팝업 -->
+<div id="note_03" class="dialog note_dialog more">
 
-    <div class="pop_header">
-        <span class="img1"></span>
+    <div class="tit_box">
+        <h3>내용 전체보기</h3>
     </div>
 
-    <div class="pop_content">
-        로그인한 사용자만 이용가능합니다.
+    <div class="tbl_box_data">
+        <table>
+            <caption>내용 전체보기</caption>
+            <colgroup>
+                <col width="">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td class="bg">
+                        한국에서 드물게 기술 회사에 초기 투자를 해주는 곳. 한국 창업 생태계에 꼭 필요한 일을 하고 있다고 생각합니다. 항상 파이팅입니다! 스타트업에 진심을 다해주시는 멋진 엑셀러레이터입니다.
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
-    <div class="pop_footer">
+    <div class="btn_box_group">
         <div class="btn_box">
-            <button class="btn_mint pop_close">확인</button>
-        </div>
-    </div>
-
-</div>
-<!-- 경고팝업 2 -->
-<div id="alpop_02" class="dialog alpop_box">
-
-    <div class="pop_header">
-        <span class="img1"></span>
-    </div>
-
-    <div class="pop_content">
-        중복된 회원이 존재합니다.<br/>
-        관리자에게 문의하시길 바랍니다.
-    </div>
-
-    <div class="pop_footer">
-        <div class="btn_box">
-            <button class="btn_mint pop_close">확인</button>
-        </div>
-    </div>
-
-</div>
-<!-- 경고팝업 3 -->
-<div id="alpop_03" class="dialog alpop_box">
-
-    <div class="pop_header">
-        <span class="img1"></span>
-    </div>
-
-    <div class="pop_content">
-        회원정보로 조회되는 VC가 없습니다. <br/>
-        VICS_R 인력정보관리[1303]에 이름, 생년월일, 성별이
-        동일하게 입력되어있는지 확인하여주시길 바랍니다. 
-    </div>
-
-    <div class="pop_footer">
-        <div class="btn_box">
-            <button class="btn_mint pop_close">확인</button>
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">닫기</a>
         </div>
     </div>
 
 </div>
 
+<!-- 쪽지보내기 팝업 -->
+<div id="note_01" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>쪽지보내기</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>쪽지보내기</caption>
+            <colgroup>
+                <col width="20%;">
+                <col width="30%;">
+                <col width="20%;">
+                <col width="30%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th scope="row"><label for="radio_01">구분</label></th>
+                    <td colspan="3">투자제안</td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="input_02">제목</label></th>
+                    <td colspan="3">
+                        <div class="inp_box">
+                            <input type="text" id="input_02">
+                        </div>
+                    </td>
+                </tr>
+                <tr class="bg">
+                    <td colspan="4">
+                        <div class="inp_group">
+                            <div class="textarea_box cont">
+                                <textarea id="textarea_01"></textarea>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="" class="btn_mint shadow">저장</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
+
+</div>
+
+<!-- 내용수정 팝업 -->
+<div id="note_02" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>내용수정</h3>
+    </div>
+
+    <div class="talk_txt">
+        <div class="textarea_box">
+            <textarea placeholder="벤처투자 TALK는 500자 까지 작성 가능합니다."></textarea>
+        </div>
+        <div class="talk_txt_info">
+            <div class="left">
+                <span class="count">
+                    <span class="num">0</span>
+                    <span class="total">/ 500</span>
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="" class="btn_mint shadow">수정</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
