--- a/portal/html/USR-1242-F-LIST.html
+++ b/portal/html/USR-1242-F-LIST.html
@@ -36,25 +36,25 @@
                         <a href="javascript:void(0);">벤처투자매칭</a>
                         <ul>
                             <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
-                            <li><a href="./html/USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
-                            <li><a href="./html/USR-1030-B-LIST.html">기업홍보</a></li>
-                            <li><a href="./html/USR-1040-F-DASH.html">통합공시</a></li>
+                            <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
+                            <li><a href="./USR-1030-B-LIST.html">기업홍보</a></li>
+                            <li><a href="./USR-1040-F-DASH.html">통합공시</a></li>
                             <li>
-                                <a href="./html/USR-1051-H-CONTN.html">벤처투자마트</a>
+                                <a href="./USR-1051-H-CONTN.html">벤처투자마트</a>
                                 <ul>
-                                    <li><a href="./html/USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
-                                    <li><a href="./html/USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
-                                    <li><a href="./html/USR-1056-F-LIST.html">신청 정보 확인</a></li>
-                                    <li><a href="./html/USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
-                                    <li><a href="./html/USR-1053-B-LIST.html">FAQ</a></li>
+                                    <li><a href="./USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
+                                    <li><a href="./USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
+                                    <li><a href="./USR-1056-F-LIST.html">신청 정보 확인</a></li>
+                                    <li><a href="./USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
+                                    <li><a href="./USR-1053-B-LIST.html">FAQ</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="./html/USR-1061-H-CONTN.html">주식유통정보</a>
+                                <a href="./USR-1061-H-CONTN.html">주식유통정보</a>
                                 <ul>
-                                    <li><a href="./html/USR-1061-H-CONTN.html">VC구주유통망</a></li>
-                                    <li><a href="./html/USR-1062-H-CONTN.html">구주거래정보망</a></li>
-                                    <li><a href="./html/USR-1063-H-CONTN.html">M&A 거래정보망</a></li>
+                                    <li><a href="./USR-1061-H-CONTN.html">VC구주유통망</a></li>
+                                    <li><a href="./USR-1062-H-CONTN.html">구주거래정보망</a></li>
+                                    <li><a href="./USR-1063-H-CONTN.html">M&A 거래정보망</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -62,48 +62,48 @@
                     <li>
                         <a href="javascript:void(0);">투자가이드</a>
                         <ul>
-                            <li><a href="./html/USR-1110-H-CONTN.html">가이드 A to Z</a></li>
-                            <li><a href="./html/USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
-                            <li><a href="./html/USR-02-04-B-LIST.html">FAQ</a></li>
-                            <li><a href="./html/USR-1150-B-LIST.html">용어사전</a></li>
-                            <li><a href="./html/USR-1161-H-CONTN.html">교육</a></li>
-                            <li><a href="./html/USR-1162-B-LIST.html">벤처투자상담</a></li>
+                            <li><a href="./USR-1110-H-CONTN.html">가이드 A to Z</a></li>
+                            <li><a href="./USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
+                            <li><a href="./USR-02-04-B-LIST.html">FAQ</a></li>
+                            <li><a href="./USR-1150-B-LIST.html">용어사전</a></li>
+                            <li><a href="./USR-1161-H-CONTN.html">교육</a></li>
+                            <li><a href="./USR-1162-B-LIST.html">벤처투자상담</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="javascript:void(0);">정보서비스</a>
                         <ul>
-                            <li><a href="./html/USR-1211-H-CONTN.html">정책</a></li>
-                            <li><a href="./html/USR-1213-H-CONTN.html">법령</a></li>
+                            <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
+                            <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
                             <li>
-                                <a href="./html/USR-1220-F-DASH.html">통계</a>
+                                <a href="./USR-1220-F-DASH.html">통계</a>
                                 <ul>
-                                    <li><a href="./html/USR-1220-F-DASH.html">대시보드</a></li>
-                                    <li><a href="./html/USR-1221-F-DTL.html">투자실적</a></li>
+                                    <li><a href="./USR-1220-F-DASH.html">대시보드</a></li>
+                                    <li><a href="./USR-1221-F-DTL.html">투자실적</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="./html/USR-1231-B-LIST.html">자료실</a>
+                                <a href="./USR-1231-B-LIST.html">자료실</a>
                                 <ul>
-                                    <li><a href="./html/USR-1231-B-LIST.html">보고서</a></li>
-                                    <li><a href="./html/USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
-                                    <li><a href="./html/USR-1234-B-LIST.html">발행물</a></li>
-                                    <li><a href="./html/USR-1235-B-LIST.html">서식</a></li>
-                                    <li><a href="./html/USR-1236-H-CONTN.html">프로그램</a></li>
+                                    <li><a href="./USR-1231-B-LIST.html">보고서</a></li>
+                                    <li><a href="./USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
+                                    <li><a href="./USR-1234-B-LIST.html">발행물</a></li>
+                                    <li><a href="./USR-1235-B-LIST.html">서식</a></li>
+                                    <li><a href="./USR-1236-H-CONTN.html">프로그램</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="./html/USR-1241-F-LIST.html">구인구직</a>
+                                <a href="./USR-1241-F-LIST.html">구인구직</a>
                                 <ul>
-                                    <li><a href="./html/USR-1241-F-LIST.html">채용공고</a></li>
-                                    <li><a href="./html/USR-1242-F-LIST.html">인력Pool</a></li>
+                                    <li><a href="./USR-1241-F-LIST.html">채용공고</a></li>
+                                    <li><a href="./USR-1242-F-LIST.html">인력Pool</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="./html/USR-1251-H-CONTN.html">업무처리지원</a>
+                                <a href="./USR-12511-H-CONTN.html">업무처리지원</a>
                                 <ul>
-                                    <li><a href="./html/USR-1251-H-CONTN.html">VC 경력 확인</a></li>
-                                    <li><a href="./html/USR-1242-F-LIST.html">신청내역확인</a></li>
+                                    <li><a href="./USR-12511-H-CONTN.html">VC 경력 확인</a></li>
+                                    <li><a href="./USR-1252-F-LIST.html">신청내역확인</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -111,18 +111,18 @@
                     <li>
                         <a href="javascript:void(0);">벤처투자포털</a>
                         <ul>
-                            <li><a href="./html/USR-1310-H-CONTN.html">포털소개</a></li>
-                            <li><a href="./html/USR-1320-B-LIST.html">공지사항</a></li>
-                            <li><a href="./html/USR-1330-F-LIST.html">커뮤니티</a></li>
-                            <li><a href="./html/USR-1341-F-LIST.html">벤처투자 TALK</a></li>
+                            <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
+                            <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
+                            <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
+                            <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
                             <li>
-                                <a href="./html/USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a>
+                                <a href="./USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a>
                                 <ul>
-                                    <li><a href="./html/USR-1350-F-FORM.html">부당행위 신고</a></li>
-                                    <li><a href="./html/USR-1350-F-LIST.html">신고내역확인</a></li>
+                                    <li><a href="./USR-1350-F-FORM.html">부당행위 신고</a></li>
+                                    <li><a href="./USR-1350-F-LIST.html">신고내역확인</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./html/USR-1361-H-CONTN.html">유관기관 안내</a></li>
+                            <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -132,7 +132,7 @@
                     <input type="text">
                     <button>검색</button>
                 </div>
-                <a href="./html/USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
+                <a href="./USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -150,9 +150,9 @@
                 <a href="" class="blue">벤처투자 업무지원</a>
             </div>
             <ul>
-                <li><a href="./html/USR-2020-F-FORM.html">로그인</a></li>
-                <li><a href="./html/USR-2010-F-FORM.html">회원가입</a></li>
-                <li><a href="./html/USR-2210-F-LIST.html">사이트맵</a></li>
+                <li><a href="./USR-2020-F-FORM.html">로그인</a></li>
+                <li><a href="./USR-2010-F-FORM.html">회원가입</a></li>
+                <li><a href="./USR-2210-F-LIST.html">사이트맵</a></li>
             </ul>
         </div>
         <div class="allmenu_box">
@@ -171,25 +171,25 @@
                     <a href="javascript:void(0);">벤처투자매칭</a>
                     <ul>
                         <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
-                        <li><a href="./html/USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
-                        <li><a href="./html/USR-1030-B-LIST.html">기업홍보</a></li>
-                        <li><a href="./html/USR-1040-F-DASH.html">통합공시</a></li>
+                        <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
+                        <li><a href="./USR-1030-B-LIST.html">기업홍보</a></li>
+                        <li><a href="./USR-1040-F-DASH.html">통합공시</a></li>
                         <li class="depth3">
                             <a href="javascript:void(0);">벤처투자마트</a>
                             <ul>
-                                <li><a href="./html/USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
-                                <li><a href="./html/USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
-                                <li><a href="./html/USR-1056-F-LIST.html">신청 정보 확인</a></li>
-                                <li><a href="./html/USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
-                                <li><a href="./html/USR-1053-B-LIST.html">FAQ</a></li>
+                                <li><a href="./USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
+                                <li><a href="./USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
+                                <li><a href="./USR-1056-F-LIST.html">신청 정보 확인</a></li>
+                                <li><a href="./USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
+                                <li><a href="./USR-1053-B-LIST.html">FAQ</a></li>
                             </ul>
                         </li>
                         <li class="depth3">
                             <a href="javascript:void(0);">주식유통정보</a>
                             <ul>
-                                <li><a href="./html/USR-1061-H-CONTN.html">VC구주유통망</a></li>
-                                <li><a href="./html/USR-1062-H-CONTN.html">구주거래정보망</a></li>
-                                <li><a href="./html/USR-1063-H-CONTN.html">M&A 거래정보망</a></li>
+                                <li><a href="./USR-1061-H-CONTN.html">VC구주유통망</a></li>
+                                <li><a href="./USR-1062-H-CONTN.html">구주거래정보망</a></li>
+                                <li><a href="./USR-1063-H-CONTN.html">M&A 거래정보망</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -197,48 +197,48 @@
                 <li>
                     <a href="javascript:void(0);">투자가이드</a>
                     <ul>
-                        <li><a href="./html/USR-1110-H-CONTN.html">가이드 A to Z</a></li>
-                        <li><a href="./html/USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
-                        <li><a href="./html/USR-02-04-B-LIST.html">FAQ</a></li>
-                        <li><a href="./html/USR-1150-B-LIST.html">용어사전</a></li>
-                        <li><a href="./html/USR-1161-H-CONTN.html">교육</a></li>
-                        <li><a href="./html/USR-1162-B-LIST.html">벤처투자상담</a></li>
+                        <li><a href="./USR-1110-H-CONTN.html">가이드 A to Z</a></li>
+                        <li><a href="./USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
+                        <li><a href="./USR-02-04-B-LIST.html">FAQ</a></li>
+                        <li><a href="./USR-1150-B-LIST.html">용어사전</a></li>
+                        <li><a href="./USR-1161-H-CONTN.html">교육</a></li>
+                        <li><a href="./USR-1162-B-LIST.html">벤처투자상담</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="javascript:void(0);">정보서비스</a>
                     <ul>
-                        <li><a href="./html/USR-1211-H-CONTN.html">정책</a></li>
-                        <li><a href="./html/USR-1213-H-CONTN.html">법령</a></li>
+                        <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
+                        <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
                         <li class="depth3">
                             <a href="javascript:void(0);">통계</a>
                             <ul>
-                                <li><a href="./html/USR-1220-F-DASH.html">대시보드</a></li>
-                                <li><a href="./html/USR-1221-F-DTL.html">투자실적</a></li>
+                                <li><a href="./USR-1220-F-DASH.html">대시보드</a></li>
+                                <li><a href="./USR-1221-F-DTL.html">투자실적</a></li>
                             </ul>
                         </li>
                         <li class="depth3">
                             <a href="javascript:void(0);">자료실</a>
                             <ul>
-                                <li><a href="./html/USR-1231-B-LIST.html">보고서</a></li>
-                                <li><a href="./html/USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
-                                <li><a href="./html/USR-1234-B-LIST.html">발행물</a></li>
-                                <li><a href="./html/USR-1235-B-LIST.html">서식</a></li>
-                                <li><a href="./html/USR-1236-H-CONTN.html">프로그램</a></li>
+                                <li><a href="./USR-1231-B-LIST.html">보고서</a></li>
+                                <li><a href="./USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
+                                <li><a href="./USR-1234-B-LIST.html">발행물</a></li>
+                                <li><a href="./USR-1235-B-LIST.html">서식</a></li>
+                                <li><a href="./USR-1236-H-CONTN.html">프로그램</a></li>
                             </ul>
                         </li>
                         <li class="depth3">
                             <a href="javascript:void(0);">구인구직</a>
                             <ul>
-                                <li><a href="./html/USR-1241-F-LIST.html">채용공고</a></li>
-                                <li><a href="./html/USR-1242-F-LIST.html">인력Pool</a></li>
+                                <li><a href="./USR-1241-F-LIST.html">채용공고</a></li>
+                                <li><a href="./USR-1242-F-LIST.html">인력Pool</a></li>
                             </ul>
                         </li>
                         <li class="depth3">
                             <a href="javascript:void(0);l">업무처리지원</a>
                             <ul>
-                                <li><a href="./html/USR-1251-H-CONTN.html">VC 경력 확인</a></li>
-                                <li><a href="./html/USR-1242-F-LIST.html">신청내역확인</a></li>
+                                <li><a href="./USR-12511-H-CONTN.html">VC 경력 확인</a></li>
+                                <li><a href="./USR-1252-F-LIST.html">신청내역확인</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -246,18 +246,18 @@
                 <li>
                     <a href="javascript:void(0);">벤처투자포털</a>
                     <ul>
-                        <li><a href="./html/USR-1310-H-CONTN.html">포털소개</a></li>
-                        <li><a href="./html/USR-1320-B-LIST.html">공지사항</a></li>
-                        <li><a href="./html/USR-1330-F-LIST.html">커뮤니티</a></li>
-                        <li><a href="./html/USR-1341-F-LIST.html">벤처투자 TALK</a></li>
+                        <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
+                        <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
+                        <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
+                        <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
                         <li class="depth3">
                             <a href="javascript:void(0);">벤처투자 부당행위 신고센터</a>
                             <ul>
-                                <li><a href="./html/USR-1350-F-FORM.html">부당행위 신고</a></li>
-                                <li><a href="./html/USR-1350-F-LIST.html">신고내역확인</a></li>
+                                <li><a href="./USR-1350-F-FORM.html">부당행위 신고</a></li>
+                                <li><a href="./USR-1350-F-LIST.html">신고내역확인</a></li>
                             </ul>
                         </li>
-                        <li><a href="./html/USR-1361-H-CONTN.html">유관기관 안내</a></li>
+                        <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
                     </ul>
                 </li>
             </ul>
